--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -5,5 +5,15 @@
 </head>
 <body>
     <h1>Bun Bun bake shop</h1>
+
+    <h2>PRODUCTS</h2>
+    <h2>CART</h2>
+
+    <h3>Our hand-made cinnamon rolls</h3>
+
+    <h4>Original Cinnamon Roll
+      $2.49
+    </h4>
+    <img src="original-cinnamon-roll.jpg" alt="original" width="104" height="142">
 </body>
 </html>
