--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -4,7 +4,7 @@
     <title>Product Gallery</title>
 </head>
 <body>
-    <h1>Bun Bun bake shop</h1>
+    <h1>Bun Bun bake shops</h1>
 
     <h2>PRODUCTS</h2>
     <h2>CART</h2>
