--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -4,16 +4,36 @@
     <title>Product Gallery</title>
 </head>
 <body>
-    <h1>Bun Bun bake shops</h1>
+    <h1>Bun Bun bake shop</h1>
 
     <h2>PRODUCTS</h2>
     <h2>CART</h2>
 
     <h3>Our hand-made cinnamon rolls</h3>
 
-    <h4>Original Cinnamon Roll
-      $2.49
-    </h4>
+    <h4>Original Cinnamon Roll</h4>
+    <h4>$2.49</h4>
     <img src="original-cinnamon-roll.jpg" alt="original" width="104" height="142">
+
+    <h4>Apple Cinnamon Roll</h4>
+    <h4>$3.49</h4>
+    <img src="apple-cinnamon-roll.jpg" alt="original" width="104" height="142">
+
+    <h4>Raisin Cinnamon Roll</h4>
+    <h4>$2.99</h4>
+    <img src="raisin-cinnamon-roll.jpg" alt="original" width="104" height="142">
+
+    <h4>Walnut Cinnamon Roll</h4>
+    <h4>$3.49</h4>
+    <img src="original-cinnamon-roll.jpg" alt="original" width="104" height="142">
+
+    <h4>Double-Chocolate Cinnamon Roll</h4>
+    <h4>$3.99</h4>
+    <img src="double-chocolate-cinnamon-roll.jpg" alt="original" width="104" height="142">
+
+    <h4>Strawberry Cinnamon Roll</h4>
+    <h4>$3.99</h4>
+    <img src="strawverry-cinnamon-roll.jpg" alt="original" width="104" height="142">
+
 </body>
 </html>
