--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -11,27 +11,27 @@
 
     <h3>Our hand-made cinnamon rolls</h3>
 
-    <h4>Original Cinnamon Roll</h4>
+    <h4>Original cinnamon roll</h4>
     <h4>$2.49</h4>
     <img src="original-cinnamon-roll.jpg" alt="original" width="104" height="142">
 
-    <h4>Apple Cinnamon Roll</h4>
+    <h4>Apple cinnamon roll</h4>
     <h4>$3.49</h4>
     <img src="apple-cinnamon-roll.jpg" alt="original" width="104" height="142">
 
-    <h4>Raisin Cinnamon Roll</h4>
+    <h4>Raisin cinnamon roll</h4>
     <h4>$2.99</h4>
     <img src="raisin-cinnamon-roll.jpg" alt="original" width="104" height="142">
 
-    <h4>Walnut Cinnamon Roll</h4>
+    <h4>Walnut cinnamon roll</h4>
     <h4>$3.49</h4>
     <img src="original-cinnamon-roll.jpg" alt="original" width="104" height="142">
 
-    <h4>Double-Chocolate Cinnamon Roll</h4>
+    <h4>Double-chocolate cinnamon roll</h4>
     <h4>$3.99</h4>
     <img src="double-chocolate-cinnamon-roll.jpg" alt="original" width="104" height="142">
 
-    <h4>Strawberry Cinnamon Roll</h4>
+    <h4>Strawberry cinnamon roll</h4>
     <h4>$3.99</h4>
     <img src="strawverry-cinnamon-roll.jpg" alt="original" width="104" height="142">
 
