--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Bun Bun bake shop</h1>
+    <img src="assets/logo-01.svg"/>
 
     <h2>PRODUCTS</h2>
     <h2>CART</h2>
@@ -13,27 +14,27 @@
 
     <h4>Original cinnamon roll</h4>
     <h4>$2.49</h4>
-    <img src="original-cinnamon-roll.jpg" alt="original" width="104" height="142">
+    <img src="assets/original-cinnamon-roll.jpg"/>
 
     <h4>Apple cinnamon roll</h4>
     <h4>$3.49</h4>
-    <img src="apple-cinnamon-roll.jpg" alt="original" width="104" height="142">
+    <img src="assets/apple-cinnamon-roll.jpg"/>
 
     <h4>Raisin cinnamon roll</h4>
     <h4>$2.99</h4>
-    <img src="raisin-cinnamon-roll.jpg" alt="original" width="104" height="142">
+    <img src="assets/raisin-cinnamon-roll.jpg"/>
 
     <h4>Walnut cinnamon roll</h4>
     <h4>$3.49</h4>
-    <img src="original-cinnamon-roll.jpg" alt="original" width="104" height="142">
+    <img src="assets/walnut-cinnamon-roll.jpg"/>
 
     <h4>Double-chocolate cinnamon roll</h4>
     <h4>$3.99</h4>
-    <img src="double-chocolate-cinnamon-roll.jpg" alt="original" width="104" height="142">
+    <img src="assets/double-chocolate-cinnamon-roll.jpg"/>
 
     <h4>Strawberry cinnamon roll</h4>
     <h4>$3.99</h4>
-    <img src="strawverry-cinnamon-roll.jpg" alt="original" width="104" height="142">
+    <img src="assets/strawverry-cinnamon-roll.jpg"/>
 
 </body>
 </html>
