--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -4,7 +4,6 @@
     <title>Product Gallery</title>
 </head>
 <body>
-    <h1>Bun Bun bake shop</h1>
     <img src="assets/logo-01.svg"/>
 
     <h2>PRODUCTS</h2>
@@ -14,7 +13,7 @@
 
     <h4>Original cinnamon roll</h4>
     <h4>$2.49</h4>
-    <img src="assets/original-cinnamon-roll.jpg"/>
+    <img src="assets/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
     <h4>Apple cinnamon roll</h4>
     <h4>$3.49</h4>
