--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -17,23 +17,23 @@
 
     <h4>Apple cinnamon roll</h4>
     <h4>$3.49</h4>
-    <img src="assets/apple-cinnamon-roll.jpg"/>
+    <img src="assets/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
     <h4>Raisin cinnamon roll</h4>
     <h4>$2.99</h4>
-    <img src="assets/raisin-cinnamon-roll.jpg"/>
+    <img src="assets/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
     <h4>Walnut cinnamon roll</h4>
     <h4>$3.49</h4>
-    <img src="assets/walnut-cinnamon-roll.jpg"/>
+    <img src="assets/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
     <h4>Double-chocolate cinnamon roll</h4>
     <h4>$3.99</h4>
-    <img src="assets/double-chocolate-cinnamon-roll.jpg"/>
+    <img src="assets/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
     <h4>Strawberry cinnamon roll</h4>
     <h4>$3.99</h4>
-    <img src="assets/strawberry-cinnamon-roll.jpg"/>
+    <img src="assets/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
 </body>
 </html>
