--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Bun Bun bake shop</h1>
-    <img src="assets/logo-01.svg"/>
+    <img src="assets/logo-01.svg" width="400" height="400"/>
 
     <h2>PRODUCTS</h2>
     <h2>CART</h2>
