--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -4,7 +4,7 @@
     <title>Product Gallery</title>
 </head>
 <body>
-    <img src="assets/logo-01.svg"/>
+    <img src="assets/logo-01.svg" width="400px"/>
 
     <h2>PRODUCTS</h2>
     <h2>CART</h2>
