--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -4,15 +4,14 @@
     <title>Cart</title>
 </head>
 <body>
-    <h1>Bun Bun bake shop</h1>
-    <img src="assets/logo-01.svg"/>
+    <img src="assets/logo-01.svg" width=""400px"/>
 
     <h2>PRODUCTS</h2>
     <h2>CART</h2>
 
     <h3>Shopping Cart</h3>
 
-    <img src="assets/original-cinnamon-roll.jpg"/>
+    <img src="assets/original-cinnamon-roll.jpg" width="200" height="200"/>
     <h5> Remove </h5> 
 
     <h4>Original Cinnamon Roll</h4>
@@ -21,7 +20,7 @@
 
     <h4>$ 2.49</h4>
 
-    <img src="assets/double-chocolate-cinnamon-roll.jpg"/>
+    <img src="assets/double-chocolate-cinnamon-roll.jpg" width="200" height="200"/>
     <h5> Remove </h5> 
 
     <h4>Double Chocolate Cinnamon Roll</h4>
