--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -7,7 +7,7 @@
     <img src="assets/logo-01.svg" width="400px"/>
 
     <h2>PRODUCTS</h2>
-    <h2>CART</h2>
+    <h2><a href="cart.html">CART</a></h2>
 
     <h3>Our hand-made cinnamon rolls</h3>
 
