--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -4,7 +4,7 @@
     <title>Cart</title>
 </head>
 <body>
-    <img src="assets/logo-01.svg" width=""400px"/>
+    <img src="assets/logo-01.svg" width="400px"/>
 
     <h2>PRODUCTS</h2>
     <h2><a href="cart.html">CART</a></h2>
