--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -6,7 +6,7 @@
 <body>
     <img src="assets/logo-01.svg" width="400px"/>
 
-    <h2>PRODUCTS</h2>
+    <h2><a href="index.html">PRODUCTS</a></h2>
     <h2><a href="cart.html">CART</a></h2>
 
     <h3>Our hand-made cinnamon rolls</h3>
