--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -5,8 +5,9 @@
 </head>
 <body>
     <img src="assets/logo-01.svg" width="400px"/>
+    <hr>
 
-    <h2>PRODUCTS</h2>
+    <h2><a href="index.html">PRODUCTS</a></h2>
     <h2><a href="cart.html">CART</a></h2>
 
     <h3>Shopping Cart</h3>
