--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -4,20 +4,22 @@
     <title>Product Detail</title>
 </head>
 <body>
-    <h1>Bun Bun bake shop</h1>
-    <img src="assets/logo-01.svg" width="400" height="400"/>
+    <img src="assets/logo-01.svg" width="400px"/>
+    <hr>
 
-    <h2>PRODUCTS</h2>
-    <h2>CART</h2>
+    <h2><a href="index.html">PRODUCTS</a></h2>
+    <h2><a href="cart.html">CART</a></h2>
 
     <h3>Original cinnamon roll</h3>
 
-    <img src="assets/original-cinnamon-roll.jpg"/>
+    <img src="assets/original-cinnamon-roll.jpg" width="600" height="600"/>
     <h4> Customize our delicious, hand-made cinnamon roll to your liking! </h4> 
 
     <h4>Glazing:</h4>
 
+
     <h4>Pack size:</h4>
+    
 
     <h5> $ 2.49 </h5>
     <h2> Checkout </h2>
