--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -5,35 +5,42 @@
 </head>
 <body>
     <img src="assets/logo-01.svg" width="400px"/>
+    <hr>
 
     <h2><a href="index.html">PRODUCTS</a></h2>
     <h2><a href="cart.html">CART</a></h2>
 
     <h3>Our hand-made cinnamon rolls</h3>
 
-    <h4>Original cinnamon roll</h4>
-    <h4>$2.49</h4>
-    <img src="assets/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-
+    <h4><a href="detail.html">
+        <br>
+        <img src="assets/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <br>
+        <u>Original cinnamon roll</u>
+        <br>
+        $2.49
+        </a><h4>
+       
+    
+    <img src="assets/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
     <h4>Apple cinnamon roll</h4>
     <h4>$3.49</h4>
-    <img src="assets/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
+    <img src="assets/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
     <h4>Raisin cinnamon roll</h4>
     <h4>$2.99</h4>
-    <img src="assets/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
+    <img src="assets/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
     <h4>Walnut cinnamon roll</h4>
     <h4>$3.49</h4>
-    <img src="assets/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
+    <img src="assets/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
     <h4>Double-chocolate cinnamon roll</h4>
     <h4>$3.99</h4>
-    <img src="assets/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
+    <img src="assets/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
     <h4>Strawberry cinnamon roll</h4>
     <h4>$3.99</h4>
-    <img src="assets/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
 
 </body>
 </html>
