--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -4,7 +4,7 @@
     <title>Cart</title>
 </head>
 <body>
-    <img src="assets/logo-01.svg" width="400px"/>
+    <a href="index.html"><img src="assets/logo-01.svg" width="400px"/></a>
     <hr>
 
     <h2><a href="index.html">PRODUCTS</a></h2>
