added in some CSS styling

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Product Gallery</title>
 </head>
 <body>
-    <img src="assets/logo-01.svg" width="400px"/>
+    <a href="index.html"><img src="assets/logo-01.svg" width="400px"/></a>
     <hr>
 
-    <h2><a href="index.html">PRODUCTS</a></h2>
+    <center><h2><a href="index.html">PRODUCTS</a></h2>
     <h2><a href="cart.html">CART</a></h2>
 
     <h3>Our hand-made cinnamon rolls</h3>
@@ -40,7 +41,7 @@
 
     <img src="assets/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
     <h4>Strawberry cinnamon roll</h4>
-    <h4>$3.99</h4>
+    <h4>$3.99</h4></center>
 
 </body>
 </html>
