--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Cart</title>
 </head>
 <body>
     <a href="index.html"><img src="assets/logo-01.svg" width="400px"/></a>
     <hr>
 
-    <h2><a href="index.html">PRODUCTS</a></h2>
+   <center> <h2><a href="index.html">PRODUCTS</a></h2>
     <h2><a href="cart.html">CART</a></h2>
 
     <h3>Shopping Cart</h3>
@@ -30,11 +31,11 @@
     
     <h4>$ 27.45</h4>
 
-    <hr>
+    <hr width="70%">
 
     <h4>Total: $ 29.94</h4>
     
-    <h2>Checkout</h2>
+    <h2>Checkout</h2></center>
 
 </body>
 </html>
