--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Product Detail</title>
 </head>
 <body>
-    <img src="assets/logo-01.svg" width="400px"/>
+    <a href="index.html"><img src="assets/logo-01.svg" width="400px"/></a>
     <hr>
 
-    <h2><a href="index.html">PRODUCTS</a></h2>
+    <center><h2><a href="index.html">PRODUCTS</a></h2>
     <h2><a href="cart.html">CART</a></h2>
 
     <h3>Original cinnamon roll</h3>
@@ -19,10 +20,10 @@
 
 
     <h4>Pack size:</h4>
-    
+
 
     <h5> $ 2.49 </h5>
-    <h2> Checkout </h2>
+    <h2> Add to Cart </h2></center>
 
   </body>
 </html>
