--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -14,16 +14,29 @@
     <h3>Original cinnamon roll</h3>
 
     <img src="assets/original-cinnamon-roll.jpg" width="600" height="600"/>
-    <h4> Customize our delicious, hand-made cinnamon roll to your liking! </h4> 
+    <p> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
 
     <h4>Glazing:</h4>
+    <label for="glazing"></label>
+    <select name="glazing" id="glazing">
+      <option value="Keep original">Keep original</option>
+      <option value="Sugar milk">Sugar milk</option>
+      <option value="Vanilla milk">Vanilla Milk</option>
+      <option value="Double chocolate">Double Chocolate</option>
+    </select>
 
 
     <h4>Pack size:</h4>
+    <label for="size"></label>
+    <select name="size" id="size">
+      <option value="1">1</option>
+      <option value="3">3</option>
+      <option value="6">6</option>
+      <option value="12">12</option>
+    </select>
 
 
-    <h5> $ 2.49 </h5>
-    <h2> Add to Cart </h2></center>
+    <p> <h5> $ 2.49 </h5> <h2> Add to Cart </h2></p> </center>
 
   </body>
 </html>
