added hover elements to links

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -8,8 +8,9 @@
     <a href="index.html"><img src="assets/logo-01.svg" width="400px"/></a>
     <hr>
 
-    <center><h2><a href="index.html">PRODUCTS</a></h2>
-    <h2><a href="cart.html">CART</a></h2>
+    <center><h2><a href="index.html">PRODUCTS</a>
+    <br>
+    <a href="cart.html">CART</a></h2>
 
     <h3>Our hand-made cinnamon rolls</h3>
 
