cart spacing fixed

--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -19,9 +19,9 @@
     <img src="assets/original-cinnamon-roll.jpg" width="200" height="200"/>
     <h5> Remove </h5> 
 
-    <h4>Original Cinnamon Roll</h4>
-    <h4>Glazing: Keep original</h4>
-    <h4>Pack Size: 1</h4>
+    <p>Original Cinnamon Roll
+    <br>Glazing: Keep original
+    <br>Pack Size: 1</p>
 
     <h4>$ 2.49</h4>
 
@@ -30,9 +30,9 @@
     <img src="assets/double-chocolate-cinnamon-roll.jpg" width="200" height="200"/>
     <h5> Remove </h5> 
 
-    <h4>Double Chocolate Cinnamon Roll</h4>
-    <h4>Glazing: Sugar milk</h4>
-    <h4>Pack Size: 6</h4>
+    <p>Double Chocolate Cinnamon Roll
+    <br>Glazing: Sugar milk
+    <br>Pack Size: 6</p>
     
     <h4>$ 27.45</h4>
 
