added detail links

--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -17,7 +17,7 @@
     <h3>Shopping Cart</h3>
 
     <img src="assets/original-cinnamon-roll.jpg" width="200" height="200"/>
-    <h5> Remove </h5> 
+    <h5><u>Remove</u></h5> 
 
     <p>Original Cinnamon Roll
     <br>Glazing: Keep original
@@ -28,8 +28,8 @@
 <br>
 
     <img src="assets/double-chocolate-cinnamon-roll.jpg" width="200" height="200"/>
-    <h5> Remove </h5> 
-
+    <h5><u>Remove</u></h5> 
+    
     <p>Double Chocolate Cinnamon Roll
     <br>Glazing: Sugar milk
     <br>Pack Size: 6</p>
@@ -39,8 +39,7 @@
     <hr width="70%">
 
     <h4>Total: $ 29.94</h4>
-    
-    <h2>Checkout</h2></center>
+    <h2 class="button">Checkout</h2></center>
 
 </body>
 </html>
