--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -39,7 +39,7 @@
     </select>
 
 
-    <p> <h4> $ 2.49 </h4> <h2> Add to Cart </h2></p> </center>
+    <p> $ 2.49 </p> <p class="button"> Add to Cart </p> </center>
 
   </body>
 </html>
