--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -23,28 +23,50 @@
         <br>
         <u>Original cinnamon roll</u>
         <br>$2.49
-        </a><h4>
+    </a><h4>
        
     
-    <img src="assets/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-    <h4>Apple cinnamon roll</h4>
-    <h4>$3.49</h4>
+    <h4><a href="detail.html">
+        <br>
+        <img src="assets/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <br>
+        <u>Apple cinnamon roll</u>
+        <br>$3.49
+    </a></h4>
 
-    <img src="assets/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-    <h4>Raisin cinnamon roll</h4>
-    <h4>$2.99</h4>
+    <h4><a href="detail.html">
+        <br>
+        <img src="assets/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <br>
+        <u>Raisin cinnamon roll</u>
+        <br>$2.99
+    </a></h4>
 
-    <img src="assets/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-    <h4>Walnut cinnamon roll</h4>
-    <h4>$3.49</h4>
+    <h4><a href="detail.html">
+        <br>
+        <img src="assets/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <br>
+        <u>Walnut cinnamon roll</u>
+        <br>$3.49
+    </a></h4>
 
-    <img src="assets/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-    <h4>Double-chocolate cinnamon roll</h4>
-    <h4>$3.99</h4>
+    <h4><a href="detail.html">
+        <br>
+        <img src="assets/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <br>
+        <u>Double-chocolate cinnamon roll</u>
+        <br>$3.99
+    </a></h4>
 
-    <img src="assets/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-    <h4>Strawberry cinnamon roll</h4>
-    <h4>$3.99</h4></center>
+    <h4><a href="detail.html">
+        <br>
+        <img src="assets/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <br>
+        <u>Strawberry cinnamon roll</u>
+        <br>$3.99
+    </a></h4>
+
+</center>
 
 </body>
 </html>
