assests correctly linked

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -5,7 +5,7 @@
     <title>Product Gallery</title>
 </head>
 <body>
-    <a href="index.html"><img src="assets/logo-01.svg" width="400px"/></a>
+    <a href="index.html"><img src="../assets/logo/logo-01.svg" width="400px"/></a>
     <hr>
 
     <center><h2><a href="index.html">PRODUCTS</a>
@@ -19,7 +19,7 @@
 
     <h4><a href="detail.html">
         <br>
-        <img src="assets/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img src="../assets/products/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Original cinnamon roll</u>
         <br>$2.49
@@ -28,7 +28,7 @@
     
     <h4><a href="detail.html">
         <br>
-        <img src="assets/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img src="../assets/products/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Apple cinnamon roll</u>
         <br>$3.49
@@ -36,7 +36,7 @@
 
     <h4><a href="detail.html">
         <br>
-        <img src="assets/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img src="../assets/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Raisin cinnamon roll</u>
         <br>$2.99
@@ -44,7 +44,7 @@
 
     <h4><a href="detail.html">
         <br>
-        <img src="assets/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img src="../assets/products/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Walnut cinnamon roll</u>
         <br>$3.49
@@ -52,7 +52,7 @@
 
     <h4><a href="detail.html">
         <br>
-        <img src="assets/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Double-chocolate cinnamon roll</u>
         <br>$3.99
@@ -60,7 +60,7 @@
 
     <h4><a href="detail.html">
         <br>
-        <img src="assets/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img src="../assets/products/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Strawberry cinnamon roll</u>
         <br>$3.99
