--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -5,7 +5,7 @@
     <title>Cart</title>
 </head>
 <body>
-    <a href="index.html"><img src="assets/logo-01.svg" width="400px"/></a>
+    <a href="index.html"><img src="../assets/logo/logo-01.svg" width="400px"/></a>
     <hr>
 
    <center> <h2><a href="index.html">PRODUCTS</a></h2>
@@ -16,7 +16,7 @@
 
     <h3>Shopping Cart</h3>
 
-    <img src="assets/original-cinnamon-roll.jpg" width="200" height="200"/>
+    <img src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200"/>
     <h5><u>Remove</u></h5> 
 
     <p>Original Cinnamon Roll
@@ -27,7 +27,7 @@
 
 <br>
 
-    <img src="assets/double-chocolate-cinnamon-roll.jpg" width="200" height="200"/>
+    <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200"/>
     <h5><u>Remove</u></h5> 
 
     <p>Double Chocolate Cinnamon Roll
