--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -5,7 +5,7 @@
     <title>Product Detail</title>
 </head>
 <body>
-    <a href="index.html"><img src="assets/logo-01.svg" width="400px"/></a>
+    <a href="index.html"><img src="../assets/logo/logo-01.svg" width="400px"/></a>
     <hr>
 
     <center><h2><a href="index.html">PRODUCTS</a></h2>
@@ -16,7 +16,7 @@
 
     <h3>Original cinnamon roll</h3>
 
-    <img src="assets/original-cinnamon-roll.jpg" width="600" height="600"/>
+    <img src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600"/>
     <p> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
 
     <h4>Glazing:</h4>
