logo href fixed on all pages

--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -5,7 +5,9 @@
     <title>Cart</title>
 </head>
 <body>
-    <a href="index.html"><img src="../assets/logo/logo-01.svg" width="400px"/></a>
+    <a id="logo" href="index.html">
+        <img src="../assets/logo/logo-01.svg" width="400px"/>
+    </a>
     <hr>
 
    <center> <h2><a href="index.html">PRODUCTS</a></h2>
