--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -5,12 +5,17 @@
     <title>Product Gallery</title>
 </head>
 <body>
-    <a href="index.html"><img src="../assets/logo/logo-01.svg" width="400px"/></a>
+    <a id="logo" href="index.html">
+        <img src="../assets/logo/logo-01.svg" width="400px"/>
+    </a>
     <hr>
 
-    <center><h2><a href="index.html">PRODUCTS</a>
+    <center>
+        <h2><a href="index.html">PRODUCTS</a>
     <br>
-    <a href="cart.html">CART</a></h2>
+    <a href="cart.html">Cart
+        </a>
+    </h2>
 
     <br>
     <br>
