--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -18,7 +18,7 @@
 
     <h3>Shopping Cart</h3>
 
-    <img src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200"/>
+    <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200"/>
     <h5><u>Remove</u></h5> 
 
     <p>Original Cinnamon Roll
@@ -29,7 +29,7 @@
 
 <br>
 
-    <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200"/>
+    <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200"/>
     <h5><u>Remove</u></h5> 
 
     <p>Double Chocolate Cinnamon Roll
