--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -18,7 +18,7 @@
 
     <h3>Original cinnamon roll</h3>
 
-    <img src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600"/>
+    <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600"/>
     <p> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
 
     <h4>Glazing:</h4>
