--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -11,11 +11,11 @@
     <hr>
 
     <center>
-        <h2><a href="index.html">PRODUCTS</a>
+        <h2>
+            <a href="index.html">PRODUCTS</a>
     <br>
-    <a href="cart.html">Cart
-        </a>
-    </h2>
+            <a href="cart.html">CART</a>
+        </h2>
 
     <br>
     <br>
@@ -24,7 +24,7 @@
 
     <h4><a href="detail.html">
         <br>
-        <img src="../assets/products/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Original cinnamon roll</u>
         <br>$2.49
@@ -33,7 +33,7 @@
     
     <h4><a href="detail.html">
         <br>
-        <img src="../assets/products/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Apple cinnamon roll</u>
         <br>$3.49
@@ -41,7 +41,7 @@
 
     <h4><a href="detail.html">
         <br>
-        <img src="../assets/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Raisin cinnamon roll</u>
         <br>$2.99
@@ -49,7 +49,7 @@
 
     <h4><a href="detail.html">
         <br>
-        <img src="../assets/products/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Walnut cinnamon roll</u>
         <br>$3.49
@@ -57,7 +57,7 @@
 
     <h4><a href="detail.html">
         <br>
-        <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Double-chocolate cinnamon roll</u>
         <br>$3.99
@@ -65,7 +65,7 @@
 
     <h4><a href="detail.html">
         <br>
-        <img src="../assets/products/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Strawberry cinnamon roll</u>
         <br>$3.99
