add to cart button inline

--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -41,7 +41,9 @@
     </select>
 
 
-    <p> $ 2.49 </p> <p class="button"> Add to Cart </p> </center>
+  <h3> $ 2.49 <span class = "button"> Add to Cart </span> </h3>
+  
+  </center>
 
   </body>
 </html>
