get rid of inline styling

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -23,11 +23,9 @@
     <h3>Our hand-made cinnamon rolls</h3>
 
     <h4><a href="detail.html">
-        <br>
         <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-        <br>
-        <u>Original cinnamon roll</u>
-        <br>$2.49
+        <h4 class="name">Original cinnamon roll</h4>
+        <h4 class="prc">$2.49<h4>
     </a><h4>
        
     
@@ -35,8 +33,8 @@
         <br>
         <img class="prod" src="../assets/products/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
-        <u>Apple cinnamon roll</u>
-        <br>$3.49
+        <h4 class="name">Apple cinnamon roll</h4>
+        <h4 class = "prc">$3.49</h4>
     </a></h4>
 
     <h4><a href="detail.html">
