--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -10,7 +10,7 @@
     </a>
     <hr>
 
-    <center><h2><a href="index.html">PRODUCTS</a></h2>
+    <center><h2><a class="current" href="index.html">PRODUCTS</a></h2>
     <h2><a href="cart.html">CART</a></h2>
 
     <br>
