--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -12,7 +12,7 @@
 
     <center>
         <h2>
-            <a href="index.html">PRODUCTS</a>
+            <a class="current" href="index.html">PRODUCTS</a>
     <br>
             <a href="cart.html">CART</a>
         </h2>
