--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -22,53 +22,53 @@
 
     <h3>Our hand-made cinnamon rolls</h3>
 
-    <h4><a href="detail.html">
+    <div><h4><a href="detail.html">
         <br>
         <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Original cinnamon roll</u>
         <br>$2.49
-    </a></h4>
+    </a></h4></div>
 
-    <h4><a href="detail.html">
+    <div><h4><a href="detail.html">
         <br>
         <img class="prod" src="../assets/products/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Apple cinnamon roll</u>
         <br>$3.49
-    </a></h4>
+    </a></h4></div>
 
-    <h4><a href="detail.html">
+    <div><h4><a href="detail.html">
         <br>
         <img class="prod" src="../assets/products/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Raisin cinnamon roll</u>
         <br>$2.99
-    </a></h4>
+    </a></h4></div>
 
-    <h4><a href="detail.html">
+    <div><h4><a href="detail.html">
         <br>
         <img class="prod" src="../assets/products/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Walnut cinnamon roll</u>
         <br>$3.49
-    </a></h4>
+    </a></h4></div>
 
-    <h4><a href="detail.html">
+    <div><h4><a href="detail.html">
         <br>
         <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Double-chocolate cinnamon roll</u>
         <br>$3.99
-    </a></h4>
+    </a></h4></div>
 
-    <h4><a href="detail.html">
+    <div><h4><a href="detail.html">
         <br>
         <img class="prod" src="../assets/products/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
         <br>
         <u>Strawberry cinnamon roll</u>
         <br>$3.99
-    </a></h4>
+    </a></h4></div>
 
 </center>
 
