--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -10,8 +10,17 @@
     </a>
     <hr>
 
-   <center> <h2><a href="index.html">PRODUCTS</a></h2>
-    <h2><a class="current" href="cart.html">CART</a></h2>
+   <center> 
+    <h2>
+        <a href="index.html">
+            PRODUCTS
+        </a>
+    </h2>
+    <h2>
+        <a class="current" href="cart.html">
+            CART
+        </a>
+    </h2>
 
 <br>
 <br>
