--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -11,6 +11,7 @@
     <hr>
 
     <center>
+    
         <h2>
             <a class="current" href="index.html">PRODUCTS</a>
     <br>
@@ -22,37 +23,57 @@
 
     <h3>Our hand-made cinnamon rolls</h3>
 
-    <div><h4><a href="detail.html">
-        <br>
+    <div>
+        <h4>
+            <a href="detail.html">
+                <br>
         <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-        <br>
+                <br>
         <u>Original cinnamon roll</u>
-        <br>$2.49
-    </a></h4></div>
+                <br>
+        $2.49
+            </a>
+        </h4>
+    </div>
 
-    <div><h4><a href="detail.html">
-        <br>
+    <div>
+        <h4>
+            <a href="detail.html">
+                <br>
         <img class="prod" src="../assets/products/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-        <br>
+                <br>
         <u>Apple cinnamon roll</u>
-        <br>$3.49
-    </a></h4></div>
+                <br>
+        $3.49
+             </a>
+        </h4>
+    </div>
 
-    <div><h4><a href="detail.html">
-        <br>
+    <div>
+        <h4>
+            <a href="detail.html">
+            <br>
         <img class="prod" src="../assets/products/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-        <br>
+            <br>
         <u>Raisin cinnamon roll</u>
-        <br>$2.99
-    </a></h4></div>
+            <br>
+        $2.99
+            </a>
+        </h4>
+    </div>
 
-    <div><h4><a href="detail.html">
-        <br>
+    <div>
+        <h4>
+            <a href="detail.html">
+                <br>
         <img class="prod" src="../assets/products/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
-        <br>
+                <br>
         <u>Walnut cinnamon roll</u>
-        <br>$3.49
-    </a></h4></div>
+                <br>
+        $3.49
+            </a>
+        </h4>
+    </div>
 
     <div><h4><a href="detail.html">
         <br>
@@ -60,7 +81,9 @@
         <br>
         <u>Double-chocolate cinnamon roll</u>
         <br>$3.99
-    </a></h4></div>
+            </a>
+        </h4>
+    </div>
 
     <div><h4><a href="detail.html">
         <br>
@@ -68,7 +91,9 @@
         <br>
         <u>Strawberry cinnamon roll</u>
         <br>$3.99
-    </a></h4></div>
+            </a>
+        </h4>
+    </div>
 
 </center>
 
