errors fixed after html validator

--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Cart</title>
 </head>
 <body>
     <a id="logo" href="index.html">
-        <img src="../assets/logo/logo-01.svg" width="400px"/>
+        <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake shop"/>
     </a>
     <hr>
 
@@ -27,7 +27,7 @@
 
     <h3>Shopping Cart</h3>
 
-    <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200"/>
+    <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
     <h5><u>Remove</u></h5> 
 
     <p>Original Cinnamon Roll
@@ -38,7 +38,7 @@
 
 <br>
 
-    <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200"/>
+    <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
     <h5><u>Remove</u></h5> 
 
     <p>Double Chocolate Cinnamon Roll
