--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Product Gallery</title>
 </head>
 <body>
     <a id="logo" href="index.html">
-        <img src="../assets/logo/logo-01.svg" width="400px"/>
+        <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake shop"/>
     </a>
     <hr>
 
@@ -27,7 +27,7 @@
         <h4>
             <a href="detail.html">
                 <br>
-        <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
                 <br>
         <u>Original cinnamon roll</u>
                 <br>
@@ -40,7 +40,7 @@
         <h4>
             <a href="detail.html">
                 <br>
-        <img class="prod" src="../assets/products/apple-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/apple-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
                 <br>
         <u>Apple cinnamon roll</u>
                 <br>
@@ -53,7 +53,7 @@
         <h4>
             <a href="detail.html">
             <br>
-        <img class="prod" src="../assets/products/raisin-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/raisin-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
             <br>
         <u>Raisin cinnamon roll</u>
             <br>
@@ -66,7 +66,7 @@
         <h4>
             <a href="detail.html">
                 <br>
-        <img class="prod" src="../assets/products/walnut-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/walnut-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
                 <br>
         <u>Walnut cinnamon roll</u>
                 <br>
@@ -77,7 +77,7 @@
 
     <div><h4><a href="detail.html">
         <br>
-        <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
         <br>
         <u>Double-chocolate cinnamon roll</u>
         <br>$3.99
@@ -87,7 +87,7 @@
 
     <div><h4><a href="detail.html">
         <br>
-        <img class="prod" src="../assets/products/strawberry-cinnamon-roll.jpg" width="400" height="400" alt=""original"/>
+        <img class="prod" src="../assets/products/strawberry-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
         <br>
         <u>Strawberry cinnamon roll</u>
         <br>$3.99
