--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Product Detail</title>
 </head>
 <body>
     <a id="logo" href="index.html">
-      <img src="../assets/logo/logo-01.svg" width="400px"/>
+      <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake shop"/>
     </a>
     <hr>
 
@@ -20,7 +20,7 @@
 
     <h3>Original cinnamon roll</h3>
 
-    <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600"/>
+    <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600" alt="original"/>
     <p> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
 
     <h4>Glazing:</h4>
