left align text

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <a id="logo" href="index.html">
-        <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake shop"/>
+        <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake"/>
     </a>
     <hr>
 
