--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -50,7 +50,8 @@
     <hr width="70%">
 
     <h4>Total: $ 29.94</h4>
-    <h2 class="button">Checkout</h2></center>
+    <h2 class="button">Checkout</h2>
+</center>
 
 </body>
 </html>
