--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -6,18 +6,17 @@
 </head>
 <body>
     <a id="logo" href="index.html">
-        <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake"/>
+        <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake" style="display: inline-block;"/>
     </a>
-    <hr>
-
-    <center>
+    
     
         <h2>
             <a class="current" href="index.html">PRODUCTS</a>
-    <br>
             <a href="cart.html">CART</a>
         </h2>
 
+    <hr width="50%" align="right" size="50">
+    <center>
     <br>
     <br>
 
