--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -10,7 +10,6 @@
     </a>
     <hr>
 
-   <center> 
     <h2>
         <a href="index.html">
             PRODUCTS
@@ -27,14 +26,23 @@
 
     <h3>Shopping Cart</h3>
 
-    <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
-    <h5><u>Remove</u></h5> 
+    <div class="item">
 
-    <p>Original Cinnamon Roll
-    <br>Glazing: Keep original
-    <br>Pack Size: 1</p>
+        <div class="pic">
+        <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
+        <h5><u>Remove</u></h5> 
+        </div>
 
-    <h4>$ 2.49</h4>
+        <p>
+            Original Cinnamon Roll
+            <br>
+            Glazing: Keep original
+            <br>
+            Pack Size: 1
+        </p>
+
+        <h4>$ 2.49</h4>
+    </div>
 
 <br>
 
@@ -51,7 +59,6 @@
 
     <h4>Total: $ 29.94</h4>
     <h2 class="button">Checkout</h2>
-</center>
 
 </body>
 </html>
