--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -5,97 +5,90 @@
     <title>Product Gallery</title>
 </head>
 <body>
-    <div>
     <a id="logo" href="index.html">
         <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake"/>
     </a>
+
     
         <h2>
             <a class="current" href="index.html">PRODUCTS</a>
+    <br>
             <a href="cart.html">CART</a>
         </h2>
 
-        <hr>
-
+    <br>
+    <br>
 
     <h3>Our hand-made cinnamon rolls</h3>
 
-    
-    <div class="container" 
-        <div>
+    <hr>
+
+    <div class="container">
             <h4>
                 <a href="detail.html">
                     <br>
-            <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
+            <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
                     <br>
             <u>Original cinnamon roll</u>
                     <br>
-            $2.49
+            $3.49
                 </a>
             </h4>
-        </div>
 
-        <div>
             <h4>
                 <a href="detail.html">
                     <br>
-            <img class="prod" src="../assets/products/apple-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
+            <img class="prod" src="../assets/products/apple-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
                     <br>
             <u>Apple cinnamon roll</u>
                     <br>
             $3.49
                 </a>
             </h4>
-        </div>
 
-        <div>
             <h4>
                 <a href="detail.html">
                 <br>
-            <img class="prod" src="../assets/products/raisin-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
+            <img class="prod" src="../assets/products/raisin-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
                 <br>
             <u>Raisin cinnamon roll</u>
                 <br>
             $2.99
                 </a>
             </h4>
-        </div>
     </div>
 
-    <div>
+    <div class="container">
         <h4>
             <a href="detail.html">
                 <br>
-        <img class="prod" src="../assets/products/walnut-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
+        <img class="prod" src="../assets/products/walnut-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
                 <br>
         <u>Walnut cinnamon roll</u>
                 <br>
         $3.49
             </a>
         </h4>
-    </div>
 
-    <div><h4><a href="detail.html">
-        <br>
-        <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
-        <br>
-        <u>Double-chocolate cinnamon roll</u>
+        <h4><a href="detail.html">
+            <br>
+                <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
+         <br>
+                <u>Double-chocolate <br> cinnamon roll</u>
         <br>$3.99
+            </a>
+        </h4>
+
+        <h4><a href="detail.html">
+            <br>
+                <img class="prod" src="../assets/products/strawberry-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
+            <br>
+            <u>Strawberry cinnamon roll</u>
+            <br>$3.99
             </a>
         </h4>
     </div>
 
-    <div><h4><a href="detail.html">
-        <br>
-        <img class="prod" src="../assets/products/strawberry-cinnamon-roll.jpg" width="400" height="400" alt="original"/>
-        <br>
-        <u>Strawberry cinnamon roll</u>
-        <br>$3.99
-            </a>
-        </h4>
-    </div>
-
-</center>
 
 </body>
 </html>
