cart and detail page updates

--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -44,21 +44,30 @@
         <h4>$ 2.49</h4>
     </div>
 
-<br>
+    <div class="item">
 
-    <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
-    <h5><u>Remove</u></h5> 
+        <div class="pic">
+        <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
+        <h5><u>Remove</u></h5> 
+        </div>
 
-    <p>Double Chocolate Cinnamon Roll
-    <br>Glazing: Sugar milk
-    <br>Pack Size: 6</p>
-    
-    <h4>$ 27.45</h4>
+        <p>
+            Double Chocolate Cinnamon Roll
+            <br>
+            Glazing: Sugar milk
+            <br>
+            Pack Size: 6
+        </p>
 
-    <hr width="70%">
+        <h4>$ 27.45</h4>
+    </div>
 
-    <h4>Total: $ 29.94</h4>
-    <h2 class="button">Checkout</h2>
+    <hr width="70%" align="right">
+
+    <div class="end">
+        <h4>Total: $ 29.94</h4>
+        <h2 class="button">Checkout</h2>
+    </div>
 
 </body>
 </html>
