--- a/solution-hw2/detail.html
+++ b/solution-hw2/detail.html
@@ -9,8 +9,6 @@
       <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake shop"/>
     </a>
     <hr>
-
-    <center>
     
     <h2><a class="current" href="index.html">PRODUCTS</a></h2>
     <h2><a href="cart.html">CART</a></h2>
@@ -20,32 +18,34 @@
 
     <h3>Original cinnamon roll</h3>
 
-    <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600" alt="original"/>
-    <p> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
+    <div class="photo">
+          <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600" alt="original"/>
 
-    <h4>Glazing:</h4>
-    <label for="glazing"></label>
-    <select name="glazing" id="glazing">
-      <option value="Keep original">Keep original</option>
-      <option value="Sugar milk">Sugar milk</option>
-      <option value="Vanilla milk">Vanilla Milk</option>
-      <option value="Double chocolate">Double Chocolate</option>
-    </select>
-
-
-    <h4>Pack size:</h4>
-    <label for="size"></label>
-    <select name="size" id="size">
-      <option value="1">1</option>
-      <option value="3">3</option>
-      <option value="6">6</option>
-      <option value="12">12</option>
-    </select>
+        <div class="details">
+          <p> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
+          <h4>Glazing:</h4>
+          <label for="glazing"></label>
+          <select name="glazing" id="glazing">
+            <option value="Keep original">Keep original</option>
+            <option value="Sugar milk">Sugar milk</option>
+            <option value="Vanilla milk">Vanilla Milk</option>
+            <option value="Double chocolate">Double Chocolate</option>
+          </select>
 
 
-  <h3> $ 2.49 <span class = "button"> Add to Cart </span> </h3>
-  
-  </center>
+          <h4>Pack size:</h4>
+          <label for="size"></label>
+          <select name="size" id="size">
+            <option value="1">1</option>
+            <option value="3">3</option>
+            <option value="6">6</option>
+            <option value="12">12</option>
+          </select>
 
+
+        <h3 class="photo"> $ 2.49 <span class = "button"> Add to Cart </span> </h3>
+      </div>
+    </div>
+    
   </body>
 </html>
