working on header on index, once right will copy to cart and details

--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -5,23 +5,29 @@
     <title>Product Gallery</title>
 </head>
 <body>
-    <a id="logo" href="index.html">
-        <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake"/>
-    </a>
+    <div class="header">
+        <div>
+            <a id="logo" href="index.html">
+                <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake"/>
+            </a>
+        </div>
 
-    
-        <h2>
-            <a class="current" href="index.html">PRODUCTS</a>
-    <br>
-            <a href="cart.html">CART</a>
-        </h2>
+        <div class="top">
+            <h2 class="menu">
+                <a class="current" href="index.html">PRODUCTS</a>
+                <a href="cart.html">CART</a>
+            </h2>
 
-    <br>
-    <br>
+            <div>
+                <hr>
+            </div>
 
-    <h3>Our hand-made cinnamon rolls</h3>
-
-    <hr>
+            <h3 class="pagetitle">
+                Our hand-made cinnamon rolls
+            </h3>
+            
+        </div>
+    </div>
 
     <div class="container">
             <h4>
