header applied to all pages

--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -5,26 +5,29 @@
     <title>Cart</title>
 </head>
 <body>
-    <a id="logo" href="index.html">
-        <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake shop"/>
-    </a>
-    <hr>
+    <div class="header">
+        <div>
+            <a id="logo" href="index.html">
+                <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake"/>
+            </a>
+        </div>
 
-    <h2>
-        <a href="index.html">
-            PRODUCTS
-        </a>
-    </h2>
-    <h2>
-        <a class="current" href="cart.html">
-            CART
-        </a>
-    </h2>
+        <div class="top">
+            <h2 class="menu">
+                <a href="index.html">PRODUCTS</a>
+                <a  class="current" href="cart.html">CART</a>
+            </h2>
 
-<br>
-<br>
+            <div>
+                <hr>
+            </div>
 
-    <h3>Shopping Cart</h3>
+            <h3 class="pagetitle">
+                Shopping Cart
+            </h3>
+            
+        </div>
+    </div>
 
     <div class="item">
 
