--- a/solution-hw2/detail.html
+++ b/solution-hw2/detail.html
@@ -5,18 +5,29 @@
     <title>Product Detail</title>
 </head>
 <body>
-    <a id="logo" href="index.html">
-      <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake shop"/>
-    </a>
-    <hr>
-    
-    <h2><a class="current" href="index.html">PRODUCTS</a></h2>
-    <h2><a href="cart.html">CART</a></h2>
+  <div class="header">
+    <div>
+        <a id="logo" href="index.html">
+            <img src="../assets/logo/logo-01.svg" width="400px" alt="bun bun bake"/>
+        </a>
+    </div>
 
-    <br>
-    <br>
+    <div class="top">
+        <h2 class="menu">
+            <a class="current" href="index.html">PRODUCTS</a>
+            <a href="cart.html">CART</a>
+        </h2>
 
-    <h3>Original cinnamon roll</h3>
+        <div>
+            <hr>
+        </div>
+
+        <h3 class="pagetitle">
+            Original cinnamon roll
+        </h3>
+        
+    </div>
+  </div>
 
     <div class="photo">
           <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600" alt="original"/>
