flexbox fix for bottom of cart

--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -68,8 +68,18 @@
     <hr width="70%" align="right">
 
     <div class="end">
-        <h4>Total: $ 29.94</h4>
-        <h2 class="button">Checkout</h2>
+        <h4 class="priceline">
+            <div>
+                Total: 
+            </div>
+            <div>
+                $ 29.94
+            </div>
+        </h4>
+
+        <h2 class="button">
+            Checkout
+        </h2>
     </div>
 
 </body>
