--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -29,29 +29,29 @@
         </div>
     </div>
 
-    <div class="item">
-
+    <div class="item1">
         <div class="pic">
-        <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
-        <h5><u>Remove</u></h5> 
+            <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
+            <h5><u>Remove</u></h5> 
         </div>
 
         <p>
-            Original Cinnamon Roll
+            Original Cinnamon Roll            
             <br>
-            Glazing: Keep original
+            Glazing: Keep Original
             <br>
             Pack Size: 1
         </p>
 
-        <h4>$ 2.49</h4>
+        <h4 class="prc">
+            $ 2.49
+        </h4>
     </div>
-
-    <div class="item">
-
+    
+    <div class="item2">
         <div class="pic">
-        <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
-        <h5><u>Remove</u></h5> 
+            <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
+            <h5><u>Remove</u></h5> 
         </div>
 
         <p>
@@ -62,10 +62,14 @@
             Pack Size: 6
         </p>
 
-        <h4>$ 27.45</h4>
+        <h4 class="prc">
+            $ 27.45
+        </h4>
     </div>
 
-    <hr width="70%" align="right">
+    <div>
+        <hr>
+    </div>
 
     <div class="end">
         <h4 class="priceline">
