--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -82,9 +82,12 @@
                 </div>
             </h4>
 
-            <h2 class="button">
-                Checkout
-            </h2>
+            <div class="new">
+                <h2 class="button">
+                    Checkout
+                </h2>
+            </div>
+
         </div>
 </body>
 </html>
