--- a/solution-hw2/detail.html
+++ b/solution-hw2/detail.html
@@ -33,27 +33,28 @@
           <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600" alt="original"/>
 
         <div class="details">
-          <p> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
-          <h4>Glazing:</h4>
-          <label for="glazing"></label>
-          <select name="glazing" id="glazing">
-            <option value="Keep original">Keep original</option>
-            <option value="Sugar milk">Sugar milk</option>
-            <option value="Vanilla milk">Vanilla Milk</option>
-            <option value="Double chocolate">Double Chocolate</option>
-          </select>
+          <div>
+            <p class="details"> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
+            <h4 class="details">Glazing:</h4>
+            <label for="glazing"></label>
+            <select name="glazing" id="glazing">
+              <option value="Keep original">Keep original</option>
+              <option value="Sugar milk">Sugar milk</option>
+              <option value="Vanilla milk">Vanilla Milk</option>
+              <option value="Double chocolate">Double Chocolate</option>
+            </select>
+          </div>
 
-
-          <h4>Pack size:</h4>
-          <label for="size"></label>
-          <select name="size" id="size">
-            <option value="1">1</option>
-            <option value="3">3</option>
-            <option value="6">6</option>
-            <option value="12">12</option>
-          </select>
-
-
+          <div>
+            <h4 class="details">Pack size:</h4>
+            <label for="size"></label>
+            <select name="size" id="size">
+              <option value="1">1</option>
+              <option value="3">3</option>
+              <option value="6">6</option>
+              <option value="12">12</option>
+            </select>
+          </div>
         <h3 class="photo"> $ 2.49 <span class = "button"> Add to Cart </span> </h3>
       </div>
     </div>
