reference to java moved to end of body text as reccommended

--- a/solution-hw3/detail.html
+++ b/solution-hw3/detail.html
@@ -67,6 +67,6 @@
           </h3>
         </div>
       </div>
-    
+  <script src=objects.js type="text/javascript"></script>
   </body>
 </html>
