--- a/solution-hw3/detail.html
+++ b/solution-hw3/detail.html
@@ -30,29 +30,21 @@
   </div>
 
     <div class="photo">
-          <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600" alt="original"/>
+        <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600" alt="original"/>
 
-        <d <div class="details">
+        <div class="details">
           <div>
             <p class="details"> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
             <h4 class="details">Glazing:</h4>
             <label for="glazing"></label> 
-            <select id="glazingOptions" onchange="updatePrice()">
-              <option value="Keep original">Keep original</option>
-              <option value="Sugar milk">Sugar milk</option>
-              <option value="Vanilla milk">Vanilla Milk</option>
-              <option value="Double Chocolate">Double Chocolate</option> 
+            <select name="glazing" id="glazingOptions" onchange="updatePrice()">
             </select>
           </div>
     
           <div>
             <h4 class="details">Pack size:</h4>
             <label for="size"></label>
-            <select id="sizeOptions" onchange="updatePrice()">
-              <option value="1">1</option>
-              <option value="3">3</option>
-              <option value="6">6</option>
-              <option value="12">12</option>
+            <select name="size" id="sizeOptions" onchange="updatePrice()">
             </select>
           </div>
           <h3 class="photo"> 
@@ -66,7 +58,8 @@
             </span> 
           </h3>
         </div>
-      </div>
-  <script src=objects.js type="text/javascript"></script>
+    </div>
+
+    <script src="objects.js"></script>
   </body>
 </html>
