--- a/solution-hw3/detail.html
+++ b/solution-hw3/detail.html
@@ -60,6 +60,6 @@
         </div>
     </div>
 
-    <script src="objects.js"></script>
+    <script src="objects.js" type="text/javascript"></script>
   </body>
 </html>
