update gallery to link to detail pages

--- a/solution-hw4/index.html
+++ b/solution-hw4/index.html
@@ -31,7 +31,7 @@
 
     <div class="container">
             <h4>
-                <a href="detail.html">
+                <a href="detail.html?roll=Original">
                     <br>
             <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
                     <br>
@@ -42,7 +42,7 @@
             </h4>
 
             <h4>
-                <a href="detail.html">
+                <a href="detail.html?roll=Apple">
                     <br>
             <img class="prod" src="../assets/products/apple-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
                     <br>
@@ -53,7 +53,7 @@
             </h4>
 
             <h4>
-                <a href="detail.html">
+                <a href="detail.html?roll=Raisin">
                 <br>
             <img class="prod" src="../assets/products/raisin-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
                 <br>
@@ -66,7 +66,7 @@
 
     <div class="container">
         <h4>
-            <a href="detail.html">
+            <a href="detail.html?roll=Walnut">
                 <br>
         <img class="prod" src="../assets/products/walnut-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
                 <br>
@@ -76,7 +76,7 @@
             </a>
         </h4>
 
-        <h4><a href="detail.html">
+        <h4><a href="detail.html?roll=Double-Chocolate">
             <br>
                 <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
          <br>
@@ -85,7 +85,7 @@
             </a>
         </h4>
 
-        <h4><a href="detail.html">
+        <h4><a href="detail.html?roll=Strawberry">
             <br>
                 <img class="prod" src="../assets/products/strawberry-cinnamon-roll.jpg" width="285" height="285" alt="original"/>
             <br>
