--- a/solution-hw4/detail.html
+++ b/solution-hw4/detail.html
@@ -6,7 +6,6 @@
     <script src="objects.js" type="text/javascript"></script>
     <title>Product Detail</title>
 </head>
-
 <body>
   <div class="header">
     <div>
@@ -25,8 +24,7 @@
             <hr>
         </div>
 
-        <h3 class="pagetitle">
-            Original cinnamon roll
+        <h3 class="pagetitle" id="rollTitle">
         </h3>
         
     </div>
@@ -36,8 +34,6 @@
     <img class="prod" id="rollImage" src="../assets/products/original-cinnamon-roll.jpg" width="600" height="600" alt="original"/>
 
     <div class="details">
-        <h1 id="rollTitle"></h1>
-
         <div>
             <p class="details"> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
             <h4 class="details">Glazing:</h4>
