--- a/solution-hw4/detail.html
+++ b/solution-hw4/detail.html
@@ -31,8 +31,8 @@
   </div>
 
   <div class="photo">
-    <!-- Dynamically set the image source based on the product -->
-    <img class="prod" id="rollImage" width="600" height="600" alt="original"/>
+    <!-- Dynamically set the image depending on product -->
+    <img class="prod" id="rollImage" width="600" height="600" alt="cinamon roll"/>
 
     <div class="details">
         <div>
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <!-- Initialize the product details using JavaScript -->
+  <!-- Product details thru JAVA -->
   <script>
     const queryString = window.location.search;
     const params = new URLSearchParams(queryString);
