--- a/solution-hw4/detail.html
+++ b/solution-hw4/detail.html
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <!-- Product details thru JAVA -->
+  <!-- Product details thru javascript -->
   <script>
     const queryString = window.location.search;
     const params = new URLSearchParams(queryString);
