--- a/solution-hw4/cart.html
+++ b/solution-hw4/cart.html
@@ -29,65 +29,32 @@
         </div>
     </div>
 
-    <div class="item1">
-        <div class="pic">
-            <img class="prod" src="../assets/products/original-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
-            <h5><u>Remove</u></h5> 
-        </div>
-
-        <p>
-            Original Cinnamon Roll            
-            <br>
-            Glazing: Keep Original
-            <br>
-            Pack Size: 1
-        </p>
-
-        <h4 class="prc">
-            $ 2.49
-        </h4>
-    </div>
-    
-    <div class="item2">
-        <div class="pic">
-            <img class="prod" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" height="200" alt="original"/>
-            <h5><u>Remove</u></h5> 
-        </div>
-
-        <p>
-            Double Chocolate Cinnamon Roll
-            <br>
-            Glazing: Sugar milk
-            <br>
-            Pack Size: 6
-        </p>
-
-        <h4 class="prc">
-            $ 27.45
-        </h4>
+    <div id="cart-items" class="cart-items">
     </div>
 
-        <div class="end">
+    <div class="end">
+        <div>
+            <hr>
+        </div>
+
+        <h4 class="priceline">
             <div>
-                <hr>
+                Total: 
             </div>
 
-            <h4 class="priceline">
-                <div>
-                    Total: 
-                </div>
-
-                <div>
-                    $ 29.94
-                </div>
-            </h4>
-
-            <div class="new">
-                <h2 class="button">
-                    Checkout
-                </h2>
+            <div id="total-price">
+                $0.00
             </div>
+        </h4>
 
+        <div class="new">
+            <h2 class="button">
+                Checkout
+            </h2>
         </div>
+    </div>
+
+    <script src="objects.js"></script>
+
 </body>
 </html>
