--- a/solution-hw5/cart.html
+++ b/solution-hw5/cart.html
@@ -17,7 +17,7 @@
         <div class="top">
             <h2 class="menu">
                 <a href="index.html">PRODUCTS</a>
-                <a  class="current" href="cart.html">CART</a>
+                <a class="current" href="cart.html">CART</a>
             </h2>
 
             <div>
@@ -32,6 +32,7 @@
     </div>
 
     <div id="cart-items" class="cart-items">
+        <!-- Cart items will be dynamically added here -->
     </div>
 
     <div class="end">
