--- a/solution-hw5/index.html
+++ b/solution-hw5/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="rollsData.js" type="text/javascript"></script> 
+    <script src="objects.js" type="text/javascript" defer></script>
     <title>Product Gallery</title>
 </head>
 <body>
