finish combining HW 4 and 5

--- a/solution-hw6/detail.html
+++ b/solution-hw6/detail.html
@@ -38,14 +38,12 @@
         <div>
             <p class="details"> Customize our delicious, hand-made cinnamon roll to your liking! </p> 
             <h4 class="details">Glazing:</h4>
-            <select name="glazing" id="glazingOptions" onchange="updatePrice()">
-            </select>
+            <select name="glazing" id="glazingOptions" onchange="updatePrice()"></select>
         </div>
 
         <div>
             <h4 class="details">Pack size:</h4>
-            <select name="size" id="sizeOptions" onchange="updatePrice()">
-            </select>
+            <select name="size" id="sizeOptions" onchange="updatePrice()"></select>
         </div>
         
         <h3 class="photo"> 
